Login, Session, Spotify Auth

--- a/spotify-meteor/client/main.html
+++ b/spotify-meteor/client/main.html
@@ -1,11 +1,13 @@
 <head>
-  <title>Spot-it-fy</title>
-  <script>
-    window.onSpotifyWebPlaybackSDKReady = () => console.log( "Spotify SDK Ready" );
-  </script>
-  <script src="https://sdk.scdn.co/spotify-player.js"></script>
+    <title>Spot-it-fy</title>
+    <script>
+      window.onSpotifyWebPlaybackSDKReady = () => console.log( "Spotify SDK Ready" );
+    </script>
+    <script src="https://sdk.scdn.co/spotify-player.js"></script>
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.2/css/all.css"
+          integrity="sha384-/rXc/GQVaYpyDdyxK+ecHPVYJSN9bmVFBvjA/9eOB+pb3F2w2N6fc5qB9Ew5yIns" crossorigin="anonymous">
 </head>
- 
+
 <body>
-  <div id="render-target"></div>
+    <div id="render-target"></div>
 </body>
