--- a/spotify-meteor/client/main.html
+++ b/spotify-meteor/client/main.html
@@ -1,5 +1,6 @@
 <head>
     <title>Spot-it-fy</title>
+    <!-- Juan Useche: no olviden agregar un fav icon a su aplicación -->
     <script>
       window.onSpotifyWebPlaybackSDKReady = () => console.log( "Spotify SDK Ready" );
     </script>
